welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: type mismatch;
 found   : String
 required: Boolean
while (litMessage) {
       ^BDR2:6: error: value avance is not a member of Unit
		case "L" =>gauche() avance();
                                    ^